k8s/008-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: network-infra-viewer
  namespace: network-infra-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      name: network-infra-viewer
  template:
    metadata:
      labels:
        name: network-infra-viewer
    spec:
      restartPolicy: Always
      containers:
        - name: network-infrastructure-viewer-rijkswaterstaat
          image: harbor.k8s.services.cnap-am4.intranet.rws.nl/datalake/network-infrastructure-viewer-rijkswaterstaat:1.2.1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/appbuilder/data
              name: network-infra-viewer-data
            - mountPath: /opt/ncubed/data/configs/CSPC_exports
              name: network-infra-viewer-cspc-data
      imagePullSecrets:
        - name: registry-cred
      volumes:
        - name: network-infra-viewer-data
          persistentVolumeClaim:
            claimName: network-infra-viewer-pvc
        - name: network-infra-viewer-cspc-data
          persistentVolumeClaim:
            claimName: network-infra-viewer-cspc-pvc
