k8s/009-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: network-infra-viewer
  namespace: network-infra-viewer
  labels:
    name: network-infra-viewer
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30100
  selector:
    name: network-infra-viewer
